v1.1.0/modules/schema/pages/class/GovSteamCC.adoc
= `GovSteamCC`
:toclevels: 4


+++Cross compound turbine governor.  Unlike tandem compound units, cross compound units are not on the same shaft.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteamCC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]
**** *`GovSteamCC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<dhp,`dhp`>>
//| [[slots_table.dhp]]<<dhp,`dhp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++HP damping factor (<i>Dhp</i>).  Typical value = 0.+++
| _n/a_

| <<dlp,`dlp`>>
//| [[slots_table.dlp]]<<dlp,`dlp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++LP damping factor (<i>Dlp</i>).  Typical value = 0.+++
| _n/a_

| <<fhp,`fhp`>>
//| [[slots_table.fhp]]<<fhp,`fhp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of HP power ahead of reheater (<i>Fhp</i>).  Typical value = 0,3.+++
| _n/a_

| <<flp,`flp`>>
//| [[slots_table.flp]]<<flp,`flp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fraction of LP power ahead of reheater (<i>Flp</i>).  Typical value = 0,7.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pmaxhp,`pmaxhp`>>
//| [[slots_table.pmaxhp]]<<pmaxhp,`pmaxhp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum HP value position (<i>Pmaxhp</i>).  Typical value = 1.+++
| _n/a_

| <<pmaxlp,`pmaxlp`>>
//| [[slots_table.pmaxlp]]<<pmaxlp,`pmaxlp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum LP value position (<i>Pmaxlp</i>).  Typical value = 1.+++
| _n/a_

| <<rhp,`rhp`>>
//| [[slots_table.rhp]]<<rhp,`rhp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++HP governor droop (<i>Rhp</i>) (&gt; 0).  Typical value = 0,05.+++
| _n/a_

| <<rlp,`rlp`>>
//| [[slots_table.rlp]]<<rlp,`rlp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++LP governor droop (<i>Rlp</i>) (&gt; 0).  Typical value = 0,05.+++
| _n/a_

| <<t1hp,`t1hp`>>
//| [[slots_table.t1hp]]<<t1hp,`t1hp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++HP governor time constant (<i>T1hp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<t1lp,`t1lp`>>
//| [[slots_table.t1lp]]<<t1lp,`t1lp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++LP governor time constant (<i>T1lp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<t3hp,`t3hp`>>
//| [[slots_table.t3hp]]<<t3hp,`t3hp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++HP turbine time constant (<i>T3hp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<t3lp,`t3lp`>>
//| [[slots_table.t3lp]]<<t3lp,`t3lp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++LP turbine time constant (<i>T3lp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<t4hp,`t4hp`>>
//| [[slots_table.t4hp]]<<t4hp,`t4hp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++HP turbine time constant (<i>T4hp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<t4lp,`t4lp`>>
//| [[slots_table.t4lp]]<<t4lp,`t4lp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++LP turbine time constant (<i>T4lp</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<t5hp,`t5hp`>>
//| [[slots_table.t5hp]]<<t5hp,`t5hp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++HP reheater time constant (<i>T5hp</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<t5lp,`t5lp`>>
//| [[slots_table.t5lp]]<<t5lp,`t5lp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++LP reheater time constant (<i>T5lp</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<HighPressureSynchronousMachineDynamics,`HighPressureSynchronousMachineDynamics`>>
//| [[slots_table.HighPressureSynchronousMachineDynamics]]<<HighPressureSynchronousMachineDynamics,`HighPressureSynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++High-pressure synchronous machine with which this cross-compound turbine governor is associated.+++
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]

| <<LowPressureSynchronousMachineDynamics,`LowPressureSynchronousMachineDynamics`>>
//| [[slots_table.LowPressureSynchronousMachineDynamics]]<<LowPressureSynchronousMachineDynamics,`LowPressureSynchronousMachineDynamics`>>
| 1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Low-pressure synchronous machine with which this cross-compound turbine governor is associated.+++
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#dhp]
=== `dhp`
+++HP damping factor (<i>Dhp</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.dhp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dhp,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dlp]
=== `dlp`
+++LP damping factor (<i>Dlp</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.dlp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dlp,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#fhp]
=== `fhp`
+++Fraction of HP power ahead of reheater (<i>Fhp</i>).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.fhp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fhp,&#10548;>>
--
////


//[discrete]
[#flp]
=== `flp`
+++Fraction of LP power ahead of reheater (<i>Flp</i>).  Typical value = 0,7.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.flp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.flp,&#10548;>>
--
////


//[discrete]
[#HighPressureSynchronousMachineDynamics]
=== `HighPressureSynchronousMachineDynamics`
+++High-pressure synchronous machine with which this cross-compound turbine governor is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CrossCompoundTurbineGovernorDynamics.HighPressureSynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.HighPressureSynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#LowPressureSynchronousMachineDynamics]
=== `LowPressureSynchronousMachineDynamics`
+++Low-pressure synchronous machine with which this cross-compound turbine governor is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CrossCompoundTurbineGovernorDynamics.LowPressureSynchronousMachineDynamics`
| Cardinality
| 1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/CrossCompoundTurbineGovernorDynamics.adoc[`CrossCompoundTurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.LowPressureSynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pmaxhp]
=== `pmaxhp`
+++Maximum HP value position (<i>Pmaxhp</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.pmaxhp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmaxhp,&#10548;>>
--
////


//[discrete]
[#pmaxlp]
=== `pmaxlp`
+++Maximum LP value position (<i>Pmaxlp</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.pmaxlp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmaxlp,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rhp]
=== `rhp`
+++HP governor droop (<i>Rhp</i>) (&gt; 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.rhp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rhp,&#10548;>>
--
////


//[discrete]
[#rlp]
=== `rlp`
+++LP governor droop (<i>Rlp</i>) (&gt; 0).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.rlp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rlp,&#10548;>>
--
////


//[discrete]
[#t1hp]
=== `t1hp`
+++HP governor time constant (<i>T1hp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t1hp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1hp,&#10548;>>
--
////


//[discrete]
[#t1lp]
=== `t1lp`
+++LP governor time constant (<i>T1lp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t1lp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1lp,&#10548;>>
--
////


//[discrete]
[#t3hp]
=== `t3hp`
+++HP turbine time constant (<i>T3hp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t3hp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3hp,&#10548;>>
--
////


//[discrete]
[#t3lp]
=== `t3lp`
+++LP turbine time constant (<i>T3lp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t3lp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3lp,&#10548;>>
--
////


//[discrete]
[#t4hp]
=== `t4hp`
+++HP turbine time constant (<i>T4hp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t4hp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4hp,&#10548;>>
--
////


//[discrete]
[#t4lp]
=== `t4lp`
+++LP turbine time constant (<i>T4lp</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t4lp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4lp,&#10548;>>
--
////


//[discrete]
[#t5hp]
=== `t5hp`
+++HP reheater time constant (<i>T5hp</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t5hp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5hp,&#10548;>>
--
////


//[discrete]
[#t5lp]
=== `t5lp`
+++LP reheater time constant (<i>T5lp</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteamCC.t5lp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5lp,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
